Bug 204359 - can't drag file from folder view widget onto a folder in the Places panel in Dolphin
Summary: can't drag file from folder view widget onto a folder in the Places panel in ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2009-08-19 06:55 UTC by Ron
Modified: 2011-12-06 16:49 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
screenshot of bug (140.29 KB, image/png)
2009-08-19 06:57 UTC, Ron
Details
Patch to drop files on places panel (3.45 KB, patch)
2011-12-06 13:29 UTC, A JANARDHAN REDDY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ron 2009-08-19 06:55:16 UTC
Version:           1.3 (using KDE 4.3.0)
OS:                Linux
Installed from:    Ubuntu Packages

Let's say that you have a folder view widget containing a file that you would like to move to another folder.  You open dolphin and the destination folder is listed in the Places panel (left side of dolphin window).  So you drag the file from the folder view widget onto the folder in the Places panel and instead of moving the file the currently selected folder in the Places panel becomes attached to the mouse cursor.  I've attached a screenshot of this behaviour.
Comment 1 Ron 2009-08-19 06:57:34 UTC
Created attachment 36268 [details]
screenshot of bug
Comment 2 FiNeX 2009-08-20 23:41:25 UTC
Confirmed in trunk.
Comment 3 Mark 2010-08-25 18:34:06 UTC
Somewhat confirmed in 4.5 ...
I get a slightly different result.

When dropping a file from the folder view on one of the places in dolphin i get the place i dropped it on as if i wanted to move that.
Comment 4 Dotan Cohen 2010-12-27 23:46:57 UTC
Seems to be fixed in 4.6 beta2 as installed from Ubuntu packages. I can drag files onto the Places items, and I get a popup asking if I want to move/copy. It seems to work as expected.

OP: can you confirm that this issue is resolved? Thanks.
Comment 5 Matthias Fuchs 2011-05-25 00:11:00 UTC
I can still reproduce this issue with KDE 4.6.3
Comment 6 David Heijkamp 2011-10-10 18:25:59 UTC
I can't reproduce this problem in 4.7.1, using Fedora 15. I'm able to drag folders from a Folder View widget onto the Places area in Dolphin.
Comment 7 A JANARDHAN REDDY 2011-12-06 13:29:54 UTC
Created attachment 66435 [details]
Patch to drop files on places panel

Now we can drop files on places panel folder, the files are moved from original location to the folder in places panel on which the files are dropped
Comment 8 A JANARDHAN REDDY 2011-12-06 14:20:22 UTC
Comment on attachment 66435 [details]
Patch to drop files on places panel

sorry, in the patch in slotplacespanelDrop funtion url.contains(dest.pathorurl()) is wrong,i will correct it later, we should check from and to directories
Comment 9 Peter Penz 2011-12-06 15:24:14 UTC
@A. Janardhan Reddy: Thanks a lot for your patch, but please contact me before spending so much time + energy into such a (quite non-trivial) patch. The issue is solved in KDE 4.7 and the reason why it currently does not work on master is the switch to the new view-engine (see http://ppenz.blogspot.com/2011/08/introducing-dolphin-20.html for details).

Ideally only one line in PlacesPanel::slotUrlsDropped() needs to get uncommented to reactivate the functionality again. I should have some time today to fix this (and most probably it will require more adjustments after uncommenting this line, but no change in DolphinMainWindow or DolphinView is required for this).
Comment 10 Peter Penz 2011-12-06 15:31:37 UTC
Git commit dd6b43543fcdb19c53b9271cdb3f0177e1f55a93 by Peter Penz.
Committed on 06/12/2011 at 16:28.
Pushed by ppenz into branch 'master'.

Reactivate drop-above-places-panel functionality

Dropping items into the Places panel has been temporary deactivated because
of switching to the new view-engine -> reactivate it again

BUG: 204359
FIXED-IN: 4.8.0

M  +2    -4    dolphin/src/panels/places/placespanel.cpp

http://commits.kde.org/kde-baseapps/dd6b43543fcdb19c53b9271cdb3f0177e1f55a93
Comment 11 Peter Penz 2011-12-06 15:34:05 UTC
I had a short look and it really was only this one line :-( If you have suggestions for improvements please let me know. I think if some adjustments should be done they should go into DragAndDropHelper::dropUrls(). Thanks!
Comment 12 A JANARDHAN REDDY 2011-12-06 16:49:07 UTC
Hi sir,
   I am newbie to kde developmen. Sir, can you guide me . I want to involve in kde. Can you cc bugs which are easy or medium level in dolphin or related things to me.

Thanking You 
A JANARDHAN REDDY
I am a second year student of computer science .I came to know about kde development in a workshop conducted at our institute. 
(In reply to comment #11)
> I had a short look and it really was only this one line :-( If you have
> suggestions for improvements please let me know. I think if some adjustments
> should be done they should go into DragAndDropHelper::dropUrls(). Thanks!