Reactivate drop-above-places-panel functionality

Dropping items into the Places panel has been temporary deactivated because
of switching to the new view-engine -> reactivate it again

BUG: 204359
FIXED-IN: 4.8.0